--- a/gapic_configs/kms/v1/cloudkms_gapic.yaml
+++ b/gapic_configs/kms/v1/cloudkms_gapic.yaml
@@ -251,11 +251,11 @@ interfaces:
 
     ###
     #
-    
+
     samples:
       standalone:
       - calling_forms: ".*"
-        value_sets: kms_create_key_ring
+        value_sets: [kms_create_key_ring]
         region_tag: kms_create_key_ring
 
     sample_value_sets:
