--- a/gapic_configs/kms/v1/cloudkms_gapic.yaml
+++ b/gapic_configs/kms/v1/cloudkms_gapic.yaml
@@ -264,6 +264,8 @@ interfaces:
       description: "Create a KeyRing"
       parameters:
       ####   defaults:
+        defaults:
+          - key_ring_id="the id"
         attributes:
         - parameter: key_ring_id
           sample_argument: true
