make argument names and nested messages work

--- a/gapic_configs/automl/v1beta1/automl_gapic.yaml
+++ b/gapic_configs/automl/v1beta1/automl_gapic.yaml
@@ -246,7 +246,7 @@ interfaces:
         - parent="projects/{project_id}/locations/{location_id}"
         attributes:
         - parameter: dataset.display_name
-          sample_argument: true
+          sample_argument_name: name
       on_success:
       - define: dataset=$resp
       - print:
